[package]
name = "Withdraw_obligation_collateral_and_redeem_reserve_liquidityy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"


[lib]
name = "Withdraw_obligation_collateral_and_redeem_reserve_liquidity1"
crate-type = ["cdylib", "lib"]

